src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones defMain
   2           | defMain

   3  definiciones : definicion
   4               | definiciones definicion

   5  definicion : definicionVariable
   6             | definicionFuncion

   7  definicionVariable : idsCS ':' tipo ';'

   8  idsCS : ID
   9        | idsCS ',' ID

  10  $$1 :

  11  definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion '}'

  12  $$2 :

  13  defMain : DEF MAIN $$2 '(' ')' ':' VOID '{' cuerpoFuncion '}'

  14  parametrosCSopt :
  15                  | parametrosCS

  16  parametrosCS : parametro
  17               | parametrosCS ',' parametro

  18  parametro : ID ':' tipoSimple

  19  tipoRetorno : VOID
  20              | tipoSimple

  21  tipoSimple : INT
  22             | DOUBLE
  23             | CHAR

  24  tipo : tipoSimple
  25       | structura
  26       | '[' INT_CONSTANT ']' tipo

  27  structura : STRUCT '{' definicionesCamposOpt '}'

  28  definicionesCamposOpt :
  29                        | definicionesCampos

  30  definicionesCampos : definicionCampo
  31                     | definicionesCampos definicionCampo

  32  definicionCampo : idsCS ':' tipo ';'

  33  cuerpoFuncion : definicionesVariables sentenciasOpt
  34                | sentenciasOpt

  35  definicionesVariables : definicionVariable
  36                        | definicionesVariables definicionVariable

  37  sentenciasOpt :
  38                | sentencias

  39  sentencias : sentencia
  40             | sentencias sentencia

  41  sentencia : WRITE expresionesCS ';'
  42            | READ expresionesCS ';'
  43            | expression '=' expression ';'
  44            | RETURN expression ';'
  45            | ID '(' expresionesCSOpt ')' ';'
  46            | ifElse
  47            | while

  48  ifElse : IF expression ':' cuerpoCondicional
  49         | IF expression ':' cuerpoCondicional ELSE cuerpoCondicional

  50  while : WHILE expression ':' cuerpoCondicional

  51  cuerpoCondicional : sentencia
  52                    | '{' sentenciasOpt '}'

  53  expresionesCSOpt :
  54                   | expresionesCS

  55  expresionesCS : expression
  56                | expresionesCS ',' expression

  57  expression : INT_CONSTANT
  58             | REAL_CONSTANT
  59             | CHAR_CONSTANT
  60             | ID
  61             | ID '(' expresionesCSOpt ')'
  62             | '(' expression ')'
  63             | expression '[' expression ']'
  64             | '(' tipoSimple ')' expression
  65             | '-' expression
  66             | '!' expression
  67             | expression '.' ID
  68             | expression '*' expression
  69             | expression '+' expression
  70             | expression '%' expression
  71             | expression '/' expression
  72             | expression '-' expression
  73             | expression '>' expression
  74             | expression '<' expression
  75             | expression LESS_EQUALS expression
  76             | expression GREATER_EQUALS expression
  77             | expression EQUALS expression
  78             | expression DISTINCT expression
  79             | expression OR expression
  80             | expression AND expression

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	DEF  shift 2
	.  error

	programa  goto 3
	definiciones  goto 4
	defMain  goto 5
	definicion  goto 6
	definicionVariable  goto 7
	definicionFuncion  goto 8
	idsCS  goto 9


state 1
	idsCS : ID .  (8)

	.  reduce 8


state 2
	definicionFuncion : DEF . ID $$1 '(' parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion '}'  (11)
	defMain : DEF . MAIN $$2 '(' ')' ':' VOID '{' cuerpoFuncion '}'  (13)

	ID  shift 10
	MAIN  shift 11
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : definiciones . defMain  (1)
	definiciones : definiciones . definicion  (4)

	ID  shift 1
	DEF  shift 2
	.  error

	defMain  goto 12
	definicion  goto 13
	definicionVariable  goto 7
	definicionFuncion  goto 8
	idsCS  goto 9


state 5
	programa : defMain .  (2)

	.  reduce 2


state 6
	definiciones : definicion .  (3)

	.  reduce 3


state 7
	definicion : definicionVariable .  (5)

	.  reduce 5


state 8
	definicion : definicionFuncion .  (6)

	.  reduce 6


state 9
	definicionVariable : idsCS . ':' tipo ';'  (7)
	idsCS : idsCS . ',' ID  (9)

	':'  shift 14
	','  shift 15
	.  error


state 10
	definicionFuncion : DEF ID . $$1 '(' parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion '}'  (11)
	$$1 : .  (10)

	.  reduce 10

	$$1  goto 16


state 11
	defMain : DEF MAIN . $$2 '(' ')' ':' VOID '{' cuerpoFuncion '}'  (13)
	$$2 : .  (12)

	.  reduce 12

	$$2  goto 17


state 12
	programa : definiciones defMain .  (1)

	.  reduce 1


state 13
	definiciones : definiciones definicion .  (4)

	.  reduce 4


state 14
	definicionVariable : idsCS ':' . tipo ';'  (7)

	'['  shift 18
	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	STRUCT  shift 22
	.  error

	tipo  goto 23
	tipoSimple  goto 24
	structura  goto 25


state 15
	idsCS : idsCS ',' . ID  (9)

	ID  shift 26
	.  error


state 16
	definicionFuncion : DEF ID $$1 . '(' parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion '}'  (11)

	'('  shift 27
	.  error


state 17
	defMain : DEF MAIN $$2 . '(' ')' ':' VOID '{' cuerpoFuncion '}'  (13)

	'('  shift 28
	.  error


state 18
	tipo : '[' . INT_CONSTANT ']' tipo  (26)

	INT_CONSTANT  shift 29
	.  error


state 19
	tipoSimple : INT .  (21)

	.  reduce 21


state 20
	tipoSimple : DOUBLE .  (22)

	.  reduce 22


state 21
	tipoSimple : CHAR .  (23)

	.  reduce 23


state 22
	structura : STRUCT . '{' definicionesCamposOpt '}'  (27)

	'{'  shift 30
	.  error


state 23
	definicionVariable : idsCS ':' tipo . ';'  (7)

	';'  shift 31
	.  error


state 24
	tipo : tipoSimple .  (24)

	.  reduce 24


state 25
	tipo : structura .  (25)

	.  reduce 25


state 26
	idsCS : idsCS ',' ID .  (9)

	.  reduce 9


state 27
	definicionFuncion : DEF ID $$1 '(' . parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion '}'  (11)
	parametrosCSopt : .  (14)

	ID  shift 32
	')'  reduce 14

	parametrosCSopt  goto 33
	parametrosCS  goto 34
	parametro  goto 35


state 28
	defMain : DEF MAIN $$2 '(' . ')' ':' VOID '{' cuerpoFuncion '}'  (13)

	')'  shift 36
	.  error


state 29
	tipo : '[' INT_CONSTANT . ']' tipo  (26)

	']'  shift 37
	.  error


state 30
	structura : STRUCT '{' . definicionesCamposOpt '}'  (27)
	definicionesCamposOpt : .  (28)

	ID  shift 1
	'}'  reduce 28

	idsCS  goto 38
	definicionesCamposOpt  goto 39
	definicionesCampos  goto 40
	definicionCampo  goto 41


state 31
	definicionVariable : idsCS ':' tipo ';' .  (7)

	.  reduce 7


state 32
	parametro : ID . ':' tipoSimple  (18)

	':'  shift 42
	.  error


state 33
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt . ')' ':' tipoRetorno '{' cuerpoFuncion '}'  (11)

	')'  shift 43
	.  error


state 34
	parametrosCSopt : parametrosCS .  (15)
	parametrosCS : parametrosCS . ',' parametro  (17)

	','  shift 44
	')'  reduce 15


state 35
	parametrosCS : parametro .  (16)

	.  reduce 16


state 36
	defMain : DEF MAIN $$2 '(' ')' . ':' VOID '{' cuerpoFuncion '}'  (13)

	':'  shift 45
	.  error


state 37
	tipo : '[' INT_CONSTANT ']' . tipo  (26)

	'['  shift 18
	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	STRUCT  shift 22
	.  error

	tipo  goto 46
	tipoSimple  goto 24
	structura  goto 25


state 38
	idsCS : idsCS . ',' ID  (9)
	definicionCampo : idsCS . ':' tipo ';'  (32)

	':'  shift 47
	','  shift 15
	.  error


state 39
	structura : STRUCT '{' definicionesCamposOpt . '}'  (27)

	'}'  shift 48
	.  error


state 40
	definicionesCamposOpt : definicionesCampos .  (29)
	definicionesCampos : definicionesCampos . definicionCampo  (31)

	ID  shift 1
	'}'  reduce 29

	idsCS  goto 38
	definicionCampo  goto 49


state 41
	definicionesCampos : definicionCampo .  (30)

	.  reduce 30


state 42
	parametro : ID ':' . tipoSimple  (18)

	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	.  error

	tipoSimple  goto 50


state 43
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' . ':' tipoRetorno '{' cuerpoFuncion '}'  (11)

	':'  shift 51
	.  error


state 44
	parametrosCS : parametrosCS ',' . parametro  (17)

	ID  shift 32
	.  error

	parametro  goto 52


state 45
	defMain : DEF MAIN $$2 '(' ')' ':' . VOID '{' cuerpoFuncion '}'  (13)

	VOID  shift 53
	.  error


state 46
	tipo : '[' INT_CONSTANT ']' tipo .  (26)

	.  reduce 26


state 47
	definicionCampo : idsCS ':' . tipo ';'  (32)

	'['  shift 18
	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	STRUCT  shift 22
	.  error

	tipo  goto 54
	tipoSimple  goto 24
	structura  goto 25


state 48
	structura : STRUCT '{' definicionesCamposOpt '}' .  (27)

	.  reduce 27


state 49
	definicionesCampos : definicionesCampos definicionCampo .  (31)

	.  reduce 31


state 50
	parametro : ID ':' tipoSimple .  (18)

	.  reduce 18


state 51
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' ':' . tipoRetorno '{' cuerpoFuncion '}'  (11)

	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	VOID  shift 55
	.  error

	tipoRetorno  goto 56
	tipoSimple  goto 57


state 52
	parametrosCS : parametrosCS ',' parametro .  (17)

	.  reduce 17


state 53
	defMain : DEF MAIN $$2 '(' ')' ':' VOID . '{' cuerpoFuncion '}'  (13)

	'{'  shift 58
	.  error


state 54
	definicionCampo : idsCS ':' tipo . ';'  (32)

	';'  shift 59
	.  error


state 55
	tipoRetorno : VOID .  (19)

	.  reduce 19


state 56
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' ':' tipoRetorno . '{' cuerpoFuncion '}'  (11)

	'{'  shift 60
	.  error


state 57
	tipoRetorno : tipoSimple .  (20)

	.  reduce 20


state 58
	defMain : DEF MAIN $$2 '(' ')' ':' VOID '{' . cuerpoFuncion '}'  (13)
	sentenciasOpt : .  (37)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 65
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	IF  shift 68
	WRITE  shift 69
	READ  shift 70
	RETURN  shift 71
	WHILE  shift 72
	'}'  reduce 37

	definicionVariable  goto 73
	idsCS  goto 9
	cuerpoFuncion  goto 74
	definicionesVariables  goto 75
	sentenciasOpt  goto 76
	sentencias  goto 77
	sentencia  goto 78
	expression  goto 79
	ifElse  goto 80
	while  goto 81


state 59
	definicionCampo : idsCS ':' tipo ';' .  (32)

	.  reduce 32


state 60
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' ':' tipoRetorno '{' . cuerpoFuncion '}'  (11)
	sentenciasOpt : .  (37)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 65
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	IF  shift 68
	WRITE  shift 69
	READ  shift 70
	RETURN  shift 71
	WHILE  shift 72
	'}'  reduce 37

	definicionVariable  goto 73
	idsCS  goto 9
	cuerpoFuncion  goto 82
	definicionesVariables  goto 75
	sentenciasOpt  goto 76
	sentencias  goto 77
	sentencia  goto 78
	expression  goto 79
	ifElse  goto 80
	while  goto 81


state 61
	expression : '-' . expression  (65)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expression  goto 84


state 62
	expression : '!' . expression  (66)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expression  goto 85


state 63
	expression : '(' . expression ')'  (62)
	expression : '(' . tipoSimple ')' expression  (64)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	INT  shift 19
	DOUBLE  shift 20
	CHAR  shift 21
	.  error

	tipoSimple  goto 86
	expression  goto 87


state 64
	expression : INT_CONSTANT .  (57)

	.  reduce 57


state 65
	idsCS : ID .  (8)
	sentencia : ID . '(' expresionesCSOpt ')' ';'  (45)
	expression : ID .  (60)
	expression : ID . '(' expresionesCSOpt ')'  (61)

	'('  shift 88
	'='  reduce 60
	AND  reduce 60
	OR  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	LESS_EQUALS  reduce 60
	GREATER_EQUALS  reduce 60
	EQUALS  reduce 60
	DISTINCT  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'%'  reduce 60
	'.'  reduce 60
	'['  reduce 60
	':'  reduce 8
	','  reduce 8


state 66
	expression : REAL_CONSTANT .  (58)

	.  reduce 58


state 67
	expression : CHAR_CONSTANT .  (59)

	.  reduce 59


state 68
	ifElse : IF . expression ':' cuerpoCondicional  (48)
	ifElse : IF . expression ':' cuerpoCondicional ELSE cuerpoCondicional  (49)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expression  goto 89


state 69
	sentencia : WRITE . expresionesCS ';'  (41)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expresionesCS  goto 90
	expression  goto 91


state 70
	sentencia : READ . expresionesCS ';'  (42)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expresionesCS  goto 92
	expression  goto 91


state 71
	sentencia : RETURN . expression ';'  (44)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expression  goto 93


state 72
	while : WHILE . expression ':' cuerpoCondicional  (50)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 83
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	.  error

	expression  goto 94


state 73
	definicionesVariables : definicionVariable .  (35)

	.  reduce 35


state 74
	defMain : DEF MAIN $$2 '(' ')' ':' VOID '{' cuerpoFuncion . '}'  (13)

	'}'  shift 95
	.  error


state 75
	cuerpoFuncion : definicionesVariables . sentenciasOpt  (33)
	definicionesVariables : definicionesVariables . definicionVariable  (36)
	sentenciasOpt : .  (37)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 65
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	IF  shift 68
	WRITE  shift 69
	READ  shift 70
	RETURN  shift 71
	WHILE  shift 72
	'}'  reduce 37

	definicionVariable  goto 96
	idsCS  goto 9
	sentenciasOpt  goto 97
	sentencias  goto 77
	sentencia  goto 78
	expression  goto 79
	ifElse  goto 80
	while  goto 81


state 76
	cuerpoFuncion : sentenciasOpt .  (34)

	.  reduce 34


state 77
	sentenciasOpt : sentencias .  (38)
	sentencias : sentencias . sentencia  (40)

	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	INT_CONSTANT  shift 64
	ID  shift 98
	REAL_CONSTANT  shift 66
	CHAR_CONSTANT  shift 67
	IF  shift 68
	WRITE  shift 69
	READ  shift 70
	RETURN  shift 71
	WHILE  shift 72
	'}'  reduce 38

	sentencia  goto 99
	expression  goto 79
	ifElse  goto 80
	while  goto 81


state 78
	sentencias : sentencia .  (39)

	.  reduce 39


state 79
	sentencia : expression . '=' expression ';'  (43)
	expression : expression . '[' expression ']'  (63)
	expression : expression . '.' ID  (67)
	expression : expression . '*' expression  (68)
	expression : expression . '+' expression  (69)
	expression : expression . '%' expression  (70)
	expression : expression . '/' expression  (71)
	expression : expression . '-' expression  (72)
	expression : expression . '>' expression  (73)
	expression : expression . '<' expression  (74)
	expression : expression . LESS_EQUALS expression  (75)
	expression : expression . GREATER_EQUALS expression  (76)
	expression : expression . EQUALS expression  (77)
	expression : expression . DISTINCT expression  (78)
	expression : expression . OR expression  (79)
	expression : expression . AND expression  (80)

	'='  shift 100
	AND  shift 101
	OR  shift 102
	'>'  shift 103
	'<'  shift 104
	LESS_EQUALS  shift 105
	GREATER_EQUALS  shift 106
	EQUALS  shift 107
	DISTINCT  shift 108
	'+'  shift 109
	'-'  shift 110
	'*'  shift 111
	'/'  shift 112
	'%'  shift 113
	'.'  shift 114
	'['  shift 115
	.  error


state 80
	sentencia : ifElse .  (46)

	.  reduce 46


state 81
	sentencia : while .  (47)

	.  reduce 47


state 82
	definicionFuncion : DEF ID $$1 '(' parametrosCSopt ')' ':' tipoRetorno '{' cuerpoFuncion . '}'  (11)

	'}'  shift 116
	.  error


state 83
	expression : ID .  (60)
	expression : ID . '(' expresionesCSOpt ')'  (61)

	'('  shift 117
	'='  reduce 60
	AND  reduce 60
	OR  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	LESS_EQUALS  reduce 60
	GREATER_EQUALS  reduce 60
	EQUALS  reduce 60
	DISTINCT  reduce 60
	'+'  reduce 60
	'-'  reduce 60
	'*'  reduce 60
	'/'  reduce 60
	'%'  reduce 60
	'.'  reduce 60
	'['  reduce 60
	']'  reduce 60
	')'  reduce 60
	':'  reduce 60
	';'  reduce 60
	','  reduce 60

